odds ratio to prob

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(e_REDCap_replace_var_label)
 export(e_bestsubset)
 export(e_bs_one_samp_dist)
 export(e_bs_two_samp_diff_dist)
+export(e_convert_oddsratio_to_probability)
+export(e_convert_probability_to_oddsratio)
 export(e_headtail)
 export(e_is_error)
 export(e_kable_latex)
