convert units functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,14 @@ export(e_REDCap_replace_var_label)
 export(e_bestsubset)
 export(e_bs_one_samp_dist)
 export(e_bs_two_samp_diff_dist)
+export(e_convert_Date_to_ExcelDate)
+export(e_convert_Datetime_to_ExcelDatetime)
+export(e_convert_ExcelDate_to_Date)
+export(e_convert_ExcelDatetime_to_Datetime)
+export(e_convert_cm_to_in)
+export(e_convert_in_to_cm)
+export(e_convert_kg_to_lb)
+export(e_convert_lb_to_kg)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
 export(e_headtail)
