--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,6 @@ export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
 export(e_headtail)
 export(e_is_error)
-export(e_kable_latex)
 export(e_linear_interpolation)
 export(e_lm_diag_plots)
 export(e_lm_power)
@@ -29,11 +28,12 @@ export(e_plot_corr_ellipse)
 export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mod_contrasts)
-export(e_plot_ttest_pval)
+export(e_print_table)
 export(e_pval_stars)
 export(e_roc_gg)
 export(e_tab_sum)
 export(e_ttest_alt_hyp_text)
+export(e_ttest_plot_pval)
 import(dplyr)
 import(ggplot2)
 import(labelled)
