--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,6 @@ Description: Solving common complex data analysis workflows.
 License: GPL (>= 3)
 URL: https://github.com/erikerhardt/erikmisc
 BugReports: https://github.com/erikerhardt/erikmisc/issues
-Depends: R (>= 4.1.0)
+Depends: R (>= 4.1.0), knitr, ROCR, dplyr, ggplot2, labelled, magrittr, stringi
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
