renaming some functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,11 +27,12 @@ export(e_mnv_norm_qqplot)
 export(e_plot_corr_ellipse)
 export(e_plot_longitudinal)
 export(e_plot_missing)
-export(e_plot_mod_contrasts)
-export(e_print_table)
+export(e_plot_model_contrasts)
 export(e_pval_stars)
+export(e_rmd_name_chunks)
 export(e_roc_gg)
-export(e_tab_sum)
+export(e_table_print)
+export(e_table_sum_freq_prop)
 export(e_ttest_alt_hyp_text)
 export(e_ttest_plot_pval)
 import(dplyr)
