--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export("%>%")
 export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
-export(e_bestsubset)
 export(e_bs_one_samp_dist)
 export(e_bs_two_samp_diff_dist)
 export(e_convert_Date_to_ExcelDate)
@@ -20,6 +19,7 @@ export(e_convert_probability_to_oddsratio)
 export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
+export(e_lm_bestsubset)
 export(e_lm_diag_plots)
 export(e_lm_power)
 export(e_message_capture)
@@ -31,6 +31,7 @@ export(e_plot_model_contrasts)
 export(e_pval_stars)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
+export(e_source_all_R_in_folder)
 export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_ttest_alt_hyp_text)
