--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
 export(e_bs_one_samp_dist)
 export(e_bs_two_samp_diff_dist)
+export(e_complete_multiple_keys)
 export(e_convert_Date_to_ExcelDate)
 export(e_convert_Datetime_to_ExcelDatetime)
 export(e_convert_ExcelDate_to_Date)
@@ -16,6 +17,7 @@ export(e_convert_kg_to_lb)
 export(e_convert_lb_to_kg)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
+export(e_expand_grid_df)
 export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
