--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2021-07-06T04:55Z
+articles:
+  key_variables_completion: key_variables_completion.html
+last_built: 2021-07-09T05:30Z
 
