--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
 export(e_bs_one_samp_dist)
 export(e_bs_two_samp_diff_dist)
+export(e_coalesce_column_set)
 export(e_complete_multiple_keys)
 export(e_convert_Date_to_ExcelDate)
 export(e_convert_Datetime_to_ExcelDatetime)
@@ -38,6 +39,7 @@ export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_ttest_alt_hyp_text)
 export(e_ttest_plot_pval)
+export(notin)
 import(dplyr)
 import(ggplot2)
 import(labelled)
