--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,9 +41,34 @@ export(e_ttest_alt_hyp_text)
 export(e_ttest_plot_pval)
 export(notin)
 import(dplyr)
+import(ellipse)
+import(emmeans)
 import(ggplot2)
 import(labelled)
-import(stringi)
+import(stringr)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
+importFrom(car,avPlots)
+importFrom(car,bcPower)
+importFrom(car,boxCox)
+importFrom(car,ncvTest)
+importFrom(car,qqPlot)
+importFrom(car,spreadLevelPlot)
+importFrom(car,vif)
+importFrom(ggpubr,as_ggplot)
+importFrom(gridExtra,arrangeGrob)
+importFrom(kableExtra,kable_styling)
+importFrom(knitr,kable)
+importFrom(labelled,var_label)
+importFrom(leaps,regsubsets)
 importFrom(magrittr,"%>%")
+importFrom(nortest,ad.test)
+importFrom(pwr,cohen.ES)
+importFrom(pwr,pwr.f2.test)
+importFrom(scales,percent)
+importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringr,str_split)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
+importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
