--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,10 +26,10 @@ export(e_lm_bestsubset)
 export(e_lm_diag_plots)
 export(e_lm_power)
 export(e_message_capture)
-export(e_mnv_norm_qqplot)
 export(e_plot_corr_ellipse)
 export(e_plot_longitudinal)
 export(e_plot_missing)
+export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
 export(e_pval_stars)
 export(e_rmd_name_chunks)
