--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,6 @@ export("%>%")
 export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
-export(e_bs_one_samp_dist)
-export(e_bs_two_samp_diff_dist)
 export(e_coalesce_column_set)
 export(e_complete_multiple_keys)
 export(e_convert_Date_to_ExcelDate)
@@ -26,6 +24,8 @@ export(e_lm_bestsubset)
 export(e_lm_diag_plots)
 export(e_lm_power)
 export(e_message_capture)
+export(e_plot_bs_one_samp_dist)
+export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_corr_ellipse)
 export(e_plot_longitudinal)
 export(e_plot_missing)
