--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(e_lm_power)
 export(e_message_capture)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
+export(e_plot_calc_break_interval)
 export(e_plot_corr_ellipse)
 export(e_plot_longitudinal)
 export(e_plot_missing)
@@ -55,6 +56,7 @@ importFrom(car,ncvTest)
 importFrom(car,qqPlot)
 importFrom(car,spreadLevelPlot)
 importFrom(car,vif)
+importFrom(flextable,regulartable)
 importFrom(ggpubr,as_ggplot)
 importFrom(gridExtra,arrangeGrob)
 importFrom(kableExtra,kable_styling)
