e_plot_missing better y breaks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
     dplyr,
     ellipse,
     emmeans,
+    flextable,
     ggplot2,
     ggpubr,
     grid,
@@ -41,7 +42,6 @@ Imports:
     magrittr,
     nortest,
     pwr,
-    qpdf,
     scales,
     stringi,
     stringr,
