e_data_convert_factor_to_numeric new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(e_convert_kg_to_lb)
 export(e_convert_lb_to_kg)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
+export(e_data_convert_factor_to_numeric)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_headtail)
