e_log_shift new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(e_linear_interpolation)
 export(e_lm_bestsubset)
 export(e_lm_diag_plots)
 export(e_lm_power)
+export(e_log_shift)
 export(e_message_capture)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
