e_plot_model_contrasts vignette

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,7 @@ pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  erikmisc_e_plot_model_contrasts: erikmisc_e_plot_model_contrasts.html
   erikmisc_key_variables_completion: erikmisc_key_variables_completion.html
-last_built: 2021-07-13T23:20Z
+last_built: 2021-07-14T05:25Z
 
