--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
 export(e_lm_bestsubset)
-export(e_lm_diag_plots)
 export(e_lm_power)
 export(e_log_shift)
 export(e_message_capture)
@@ -32,6 +31,7 @@ export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_calc_break_interval)
 export(e_plot_corr_ellipse)
+export(e_plot_lm_diagostics)
 export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
