--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(e_pval_stars)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
+export(e_table1_summaries)
 export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_ttest_alt_hyp_text)
@@ -70,13 +71,17 @@ importFrom(knitr,kable)
 importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
 importFrom(magrittr,"%>%")
+importFrom(moonBook,mycsv)
+importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
 importFrom(purrr,map2)
 importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
 importFrom(scales,percent)
 importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_wrap)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
