e_lm_power use n_param instead of n_groups

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(e_is_error)
 export(e_linear_interpolation)
 export(e_lm_bestsubset)
 export(e_lm_power)
+export(e_lm_power_ORIGINAL)
 export(e_log_shift)
 export(e_message_capture)
 export(e_plot_bs_one_samp_dist)
