new e_lm_print_results functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(e_is_error)
 export(e_linear_interpolation)
 export(e_lm_bestsubset)
 export(e_lm_power)
+export(e_lm_print_html_anova)
+export(e_lm_print_html_summary)
 export(e_log_shift)
 export(e_message_capture)
 export(e_plot_bs_one_samp_dist)
@@ -78,6 +80,9 @@ importFrom(purrr,map2)
 importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
 importFrom(scales,percent)
+importFrom(sjPlot,css_theme)
+importFrom(sjPlot,tab_df)
+importFrom(sjPlot,tab_model)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
