--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(kableExtra,kable_styling)
 importFrom(knitr,kable)
 importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
+importFrom(lmerTest,as_lmerModLmerTest)
 importFrom(magrittr,"%>%")
 importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
