new e_plot_grid_corner_label_ALL

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_calc_break_interval)
 export(e_plot_corr_ellipse)
+export(e_plot_grid_corner_label)
+export(e_plot_grid_corner_label_list)
 export(e_plot_lm_diagostics)
 export(e_plot_longitudinal)
 export(e_plot_missing)
