--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export("%>%")
 export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
+export(e_categories_a1c)
 export(e_coalesce_column_set)
 export(e_complete_multiple_keys)
 export(e_convert_Date_to_ExcelDate)
