new e_match_closest_in_range.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
 export(e_categories_a1c)
+export(e_coalesce_by_column)
 export(e_coalesce_column_set)
 export(e_complete_multiple_keys)
 export(e_convert_Date_to_ExcelDate)
@@ -29,6 +30,7 @@ export(e_lm_power)
 export(e_lm_print_html_anova)
 export(e_lm_print_html_summary)
 export(e_log_shift)
+export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
