--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
 export(e_table1_summaries)
+export(e_table_aggregate)
 export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_ttest_alt_hyp_text)
