--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: erikmisc
 Type: Package
 Title: Erik Erhardt's miscellaneous functions for solving complex data analysis workflows
-Version: 0.1.3
+Version: 0.1.4
 Date: 2021-07-13
 Authors@R:
     c(person(
@@ -20,14 +20,15 @@ RoxygenNote: 7.1.1
 VignetteBuilder: knitr
 NeedsCompilation: no
 LazyData: true
-Depends: R (>= 3.5.0)
-Imports:
-    base,
+Depends:
+    R (>= 3.5.0),
     stats,
     utils,
-    graphics,
+    graphics
+Imports:
     ROCR,
     car,
+    crayon,
     dplyr,
     ellipse,
     emmeans,
@@ -40,21 +41,19 @@ Imports:
     knitr,
     labelled,
     leaps,
+    lmerTest,
     magrittr,
+    moonBook,
     nortest,
+    purrr,
     pwr,
     scales,
+    sjPlot,
     stringi,
     stringr,
     tibble,
-    tidyselect,
     tidyr,
-    tidyverse,
-    crayon,
-    purrr,
-    moonBook,
-    sjPlot,
-    lmerTest
+    tidyselect
 Suggests:
     datasets,
     rmarkdown,
