--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,6 @@ export(e_ttest_alt_hyp_text)
 export(e_ttest_plot_pval)
 export(erikmisc_logo)
 import(dplyr)
-import(ellipse)
 import(emmeans)
 import(ggplot2)
 import(labelled)
@@ -71,10 +70,18 @@ importFrom(car,spreadLevelPlot)
 importFrom(car,vif)
 importFrom(crayon,blue)
 importFrom(crayon,make_style)
+importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
 importFrom(ggpubr,as_ggplot)
+importFrom(graphics,abline)
+importFrom(graphics,dotchart)
+importFrom(graphics,hist)
+importFrom(graphics,lines)
+importFrom(graphics,text)
 importFrom(gridExtra,arrangeGrob)
+importFrom(kableExtra,kable_paper)
 importFrom(kableExtra,kable_styling)
+importFrom(kableExtra,kbl)
 importFrom(knitr,kable)
 importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
@@ -90,6 +97,19 @@ importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
 importFrom(sjPlot,tab_df)
 importFrom(sjPlot,tab_model)
+importFrom(stats,anova)
+importFrom(stats,as.formula)
+importFrom(stats,cov)
+importFrom(stats,dnorm)
+importFrom(stats,formula)
+importFrom(stats,mahalanobis)
+importFrom(stats,ppoints)
+importFrom(stats,qchisq)
+importFrom(stats,qqplot)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,smooth.spline)
+importFrom(stats,symnum)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
@@ -98,3 +118,5 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,glob2rx)
+importFrom(utils,read.csv)
