--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
+export(e_plot_ttest_pval)
 export(e_pval_stars)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
@@ -52,7 +53,6 @@ export(e_table_aggregate)
 export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_ttest_alt_hyp_text)
-export(e_ttest_plot_pval)
 export(erikmisc_logo)
 import(dplyr)
 import(emmeans)
