e_lm_print_html_anova use Type-3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ import(labelled)
 import(stringr)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
+importFrom(car,Anova)
 importFrom(car,avPlots)
 importFrom(car,bcPower)
 importFrom(car,boxCox)
