adding several health and special functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,11 @@ export("%>%")
 export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
-export(e_categories_a1c)
+export(e_calc_a1c_categories)
+export(e_calc_bmi)
+export(e_calc_bmi_categories)
+export(e_calc_phq2_categories)
+export(e_calc_phq9_categories)
 export(e_coalesce_by_column)
 export(e_coalesce_column_set)
 export(e_complete_multiple_keys)
@@ -23,6 +27,7 @@ export(e_convert_probability_to_oddsratio)
 export(e_data_convert_factor_to_numeric)
 export(e_duplicated_all)
 export(e_expand_grid_df)
+export(e_extract_numbers_from_string)
 export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
@@ -49,6 +54,7 @@ export(e_pval_stars)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
+export(e_split_list_columns_into_indicator_columns)
 export(e_table1_summaries)
 export(e_table_aggregate)
 export(e_table_print)
@@ -83,6 +89,13 @@ importFrom(crayon,green)
 importFrom(crayon,make_style)
 importFrom(crayon,red)
 importFrom(crayon,white)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,desc)
+importFrom(dplyr,filter)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
 importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
 importFrom(ggpubr,as_ggplot)
@@ -127,12 +140,17 @@ importFrom(stats,sd)
 importFrom(stats,smooth.spline)
 importFrom(stats,symnum)
 importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringr,str_flatten)
+importFrom(stringr,str_length)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,uncount)
+importFrom(tidyselect,all_of)
 importFrom(utils,glob2rx)
 importFrom(utils,read.csv)
