--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(e_table1_summaries)
 export(e_table_aggregate)
 export(e_table_print)
 export(e_table_sum_freq_prop)
+export(e_text_unicode_to_ascii)
 export(e_ttest_alt_hyp_text)
 export(erikmisc_conflicts)
 export(erikmisc_logo)
@@ -140,6 +141,7 @@ importFrom(stats,sd)
 importFrom(stats,smooth.spline)
 importFrom(stats,symnum)
 importFrom(stringi,stri_replace_all_fixed)
+importFrom(stringi,stri_unescape_unicode)
 importFrom(stringr,str_flatten)
 importFrom(stringr,str_length)
 importFrom(stringr,str_replace_all)
