e_plot_missing, add bar plot of missing percentages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(car,spreadLevelPlot)
 importFrom(car,vif)
 importFrom(cli,rule)
 importFrom(cli,symbol)
+importFrom(cowplot,plot_grid)
 importFrom(crayon,black)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
