e_plot_compare_medians, new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(e_message_capture)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_calc_break_interval)
+export(e_plot_compare_medians)
 export(e_plot_corr_ellipse)
 export(e_plot_grid_corner_label)
 export(e_plot_grid_corner_label_list)
@@ -67,6 +68,7 @@ export(erikmisc_packages)
 import(dplyr)
 import(emmeans)
 import(ggplot2)
+import(ggpubr)
 import(labelled)
 import(stringr)
 importFrom(ROCR,performance)
