new e_read_data_subdir_into_lists and e_read_data_files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,8 @@ export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
 export(e_plot_ttest_pval)
 export(e_pval_stars)
+export(e_read_data_files)
+export(e_read_data_subdir_into_lists)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
@@ -97,6 +99,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,desc)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
@@ -123,6 +126,8 @@ importFrom(nortest,ad.test)
 importFrom(purrr,map2)
 importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
+importFrom(readr,read_csv)
+importFrom(readxl,read_xlsx)
 importFrom(rstudioapi,getThemeInfo)
 importFrom(rstudioapi,hasFun)
 importFrom(rstudioapi,isAvailable)
@@ -145,10 +150,12 @@ importFrom(stats,smooth.spline)
 importFrom(stats,symnum)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_unescape_unicode)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_flatten)
 importFrom(stringr,str_length)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,as_tibble)
