new e_convert_Grade_to_GPA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(e_convert_Date_to_ExcelDate)
 export(e_convert_Datetime_to_ExcelDatetime)
 export(e_convert_ExcelDate_to_Date)
 export(e_convert_ExcelDatetime_to_Datetime)
+export(e_convert_Grade_to_GPA)
 export(e_convert_cm_to_in)
 export(e_convert_in_to_cm)
 export(e_convert_kg_to_lb)
@@ -97,6 +98,7 @@ importFrom(crayon,red)
 importFrom(crayon,white)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
