e_read_data_files, excel files, read all or selected sheets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ importFrom(purrr,map2)
 importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
 importFrom(readr,read_csv)
+importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
 importFrom(rstudioapi,getThemeInfo)
 importFrom(rstudioapi,hasFun)
