NAMESPACE, capture last few updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(e_convert_cm_to_in)
 export(e_convert_in_to_cm)
 export(e_convert_kg_to_lb)
 export(e_convert_lb_to_kg)
+export(e_convert_logistic)
+export(e_convert_logit)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
 export(e_data_convert_factor_to_numeric)
@@ -87,7 +89,6 @@ importFrom(car,vif)
 importFrom(cli,rule)
 importFrom(cli,symbol)
 importFrom(cowplot,plot_grid)
-importFrom(crayon,black)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,col_align)
@@ -95,7 +96,6 @@ importFrom(crayon,col_nchar)
 importFrom(crayon,green)
 importFrom(crayon,make_style)
 importFrom(crayon,red)
-importFrom(crayon,white)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,case_when)
@@ -131,9 +131,6 @@ importFrom(pwr,pwr.f2.test)
 importFrom(readr,read_csv)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
-importFrom(rstudioapi,getThemeInfo)
-importFrom(rstudioapi,hasFun)
-importFrom(rstudioapi,isAvailable)
 importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
 importFrom(sjPlot,tab_df)
