e_plot_model_contrasts, switch for glm on link or response scale

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,extract)
 importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
@@ -150,11 +151,13 @@ importFrom(stats,smooth.spline)
 importFrom(stats,symnum)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_unescape_unicode)
+importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_flatten)
 importFrom(stringr,str_length)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(stringr,str_split_fixed)
 importFrom(stringr,str_sub)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
