e_read_data_subdir_into_lists and e_read_data_files, clean variable names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ importFrom(graphics,hist)
 importFrom(graphics,lines)
 importFrom(graphics,text)
 importFrom(gridExtra,arrangeGrob)
+importFrom(janitor,clean_names)
 importFrom(kableExtra,kable_paper)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,kbl)
