e_model_all_subsets_formula, new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ export(e_lm_print_html_summary)
 export(e_log_shift)
 export(e_match_closest_in_range)
 export(e_message_capture)
+export(e_model_all_subsets_formula)
+export(e_model_binary_complete)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_calc_break_interval)
@@ -156,10 +158,12 @@ importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_flatten)
 importFrom(stringr,str_length)
+importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_split_fixed)
 importFrom(stringr,str_sub)
+importFrom(stringr,str_subset)
 importFrom(stringr,str_trim)
 importFrom(stringr,str_wrap)
 importFrom(tibble,as_tibble)
@@ -168,5 +172,7 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,uncount)
 importFrom(tidyselect,all_of)
+importFrom(tidyselect,ends_with)
+importFrom(utils,combn)
 importFrom(utils,glob2rx)
 importFrom(utils,read.csv)
