--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,12 @@ importFrom(graphics,abline)
 importFrom(graphics,dotchart)
 importFrom(graphics,hist)
 importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,rug)
+importFrom(graphics,strwidth)
 importFrom(graphics,text)
 importFrom(gridExtra,arrangeGrob)
 importFrom(janitor,clean_names)
@@ -139,19 +145,27 @@ importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
 importFrom(sjPlot,tab_df)
 importFrom(sjPlot,tab_model)
+importFrom(stats,IQR)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
 importFrom(stats,cov)
+importFrom(stats,density)
 importFrom(stats,dnorm)
+importFrom(stats,dt)
 importFrom(stats,formula)
+importFrom(stats,lm)
 importFrom(stats,mahalanobis)
+importFrom(stats,na.omit)
 importFrom(stats,ppoints)
+importFrom(stats,predict)
 importFrom(stats,qchisq)
 importFrom(stats,qqplot)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,smooth.spline)
+importFrom(stats,supsmu)
 importFrom(stats,symnum)
+importFrom(stats,terms.formula)
 importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_unescape_unicode)
 importFrom(stringr,fixed)
