--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: erikmisc
 Type: Package
 Title: Erik Erhardt's miscellaneous functions for solving complex data analysis workflows
-Version: 0.1.10
-Date: 2022-04-01
+Version: 0.1.11
+Date: 2022-04-09
 Authors@R:
     c(person(
       given = "Erik"
@@ -17,6 +17,7 @@ URL: https://github.com/erikerhardt/erikmisc
 BugReports: https://github.com/erikerhardt/erikmisc/issues
 Encoding: UTF-8
 RoxygenNote: 7.1.2
+Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
 NeedsCompilation: no
 LazyData: true
@@ -46,6 +47,7 @@ Imports:
     leaps,
     lmerTest,
     magrittr,
+    modelr,
     moonBook,
     nortest,
     purrr,
