--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
 export(e_lm_bestsubset)
+export(e_lm_model_criteria)
 export(e_lm_power)
 export(e_lm_print_html_anova)
 export(e_lm_print_html_summary)
@@ -132,6 +133,12 @@ importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract)
+importFrom(modelr,mae)
+importFrom(modelr,mape)
+importFrom(modelr,mse)
+importFrom(modelr,rmse)
+importFrom(modelr,rsae)
+importFrom(modelr,rsquare)
 importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
@@ -145,6 +152,8 @@ importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
 importFrom(sjPlot,tab_df)
 importFrom(sjPlot,tab_model)
+importFrom(stats,AIC)
+importFrom(stats,BIC)
 importFrom(stats,IQR)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
@@ -156,6 +165,8 @@ importFrom(stats,formula)
 importFrom(stats,lm)
 importFrom(stats,mahalanobis)
 importFrom(stats,na.omit)
+importFrom(stats,nobs)
+importFrom(stats,pf)
 importFrom(stats,ppoints)
 importFrom(stats,predict)
 importFrom(stats,qchisq)
