e_lm_model_criteria, standardize output over model types, update import cAIC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ import(labelled)
 import(stringr)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
+importFrom(cAIC4,cAIC)
 importFrom(car,Anova)
 importFrom(car,avPlots)
 importFrom(car,bcPower)
