--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
+export(e_plot_scatterplot)
+export(e_plot_table_prop)
 export(e_plot_ttest_pval)
 export(e_pval_stars)
 export(e_read_data_files)
@@ -198,6 +200,7 @@ importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,uncount)
 importFrom(tidyselect,all_of)
+importFrom(tidyselect,any_of)
 importFrom(tidyselect,ends_with)
 importFrom(utils,combn)
 importFrom(utils,glob2rx)
