e_plot_roc, new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
+export(e_plot_roc)
 export(e_plot_scatterplot)
 export(e_plot_table_prop)
 export(e_plot_ttest_pval)
@@ -92,6 +93,7 @@ importFrom(car,ncvTest)
 importFrom(car,qqPlot)
 importFrom(car,spreadLevelPlot)
 importFrom(car,vif)
+importFrom(caret,confusionMatrix)
 importFrom(cli,rule)
 importFrom(cli,symbol)
 importFrom(cowplot,plot_grid)
