new e_calc_ECURE_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export("%>%")
 export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
+export(e_calc_ECURE_LUDTM)
+export(e_calc_ECURE_UDE)
+export(e_calc_ECURE_scale_LUDTM)
 export(e_calc_a1c_categories)
 export(e_calc_bmi)
 export(e_calc_bmi_categories)
