--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
 export(e_calc_ECURE_LUDTM)
+export(e_calc_ECURE_LUDTM2)
 export(e_calc_ECURE_UDE)
 export(e_calc_ECURE_scale_LUDTM)
 export(e_calc_a1c_categories)
