--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("%>%")
 export("%notin%")
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
+export(e_REDCap_use_dotfactor_var)
 export(e_calc_ECURE_LUDTM)
 export(e_calc_ECURE_LUDTM2)
 export(e_calc_ECURE_UDE)
