--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,11 +49,13 @@ export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_model_all_subsets_formula)
 export(e_model_binary_complete)
+export(e_plot_blank)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_calc_break_interval)
 export(e_plot_compare_medians)
 export(e_plot_corr_ellipse)
+export(e_plot_extract_legend)
 export(e_plot_grid_corner_label)
 export(e_plot_grid_corner_label_list)
 export(e_plot_lm_diagostics)
@@ -191,6 +193,7 @@ importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_unescape_unicode)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract_all)
 importFrom(stringr,str_flatten)
 importFrom(stringr,str_length)
 importFrom(stringr,str_replace)
