e_read_df_header_span_rows, new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(e_plot_ttest_pval)
 export(e_pval_stars)
 export(e_read_data_files)
 export(e_read_data_subdir_into_lists)
+export(e_read_df_header_span_rows)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
@@ -208,6 +209,7 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,uncount)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
