--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(e_convert_logit)
 export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
 export(e_data_convert_factor_to_numeric)
+export(e_data_var_labels_clear)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
