e_plot_clean_numeric_nonnum_minmax, new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(e_plot_blank)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
 export(e_plot_calc_break_interval)
+export(e_plot_clean_numeric_nonnum_minmax)
 export(e_plot_compare_medians)
 export(e_plot_corr_ellipse)
 export(e_plot_extract_legend)
@@ -91,6 +92,7 @@ import(ggplot2)
 import(ggpubr)
 import(labelled)
 import(stringr)
+import(tidyr)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(cAIC4,cAIC)
@@ -145,6 +147,7 @@ importFrom(knitr,kable)
 importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
+importFrom(lubridate,as_date)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract)
 importFrom(modelr,mae)
