e_plot_model_contrasts, replace extract with pluck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,7 +149,6 @@ importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
 importFrom(lubridate,as_date)
 importFrom(magrittr,"%>%")
-importFrom(magrittr,extract)
 importFrom(modelr,mae)
 importFrom(modelr,mape)
 importFrom(modelr,mse)
@@ -160,6 +159,7 @@ importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
 importFrom(purrr,map2)
+importFrom(purrr,pluck)
 importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
 importFrom(readr,read_csv)
