e_pilot_density_altitude, new

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_model_all_subsets_formula)
 export(e_model_binary_complete)
+export(e_pilot_density_altitude)
 export(e_plot_blank)
 export(e_plot_bs_one_samp_dist)
 export(e_plot_bs_two_samp_diff_dist)
