--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,7 +61,7 @@ export(e_plot_corr_ellipse)
 export(e_plot_extract_legend)
 export(e_plot_grid_corner_label)
 export(e_plot_grid_corner_label_list)
-export(e_plot_lm_diagostics)
+export(e_plot_lm_diagnostics)
 export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
