e_plot_model_contrasts, import rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ import(emmeans)
 import(ggplot2)
 import(ggpubr)
 import(labelled)
+import(rlang)
 import(stringr)
 import(tidyr)
 importFrom(ROCR,performance)
