e_plot_model_contrasts, fix frequencies for factor var when level has n=0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
+importFrom(forcats,fct_drop)
 importFrom(ggpubr,as_ggplot)
 importFrom(graphics,abline)
 importFrom(graphics,dotchart)
