--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: erikmisc
 Type: Package
 Title: Erik Erhardt's miscellaneous functions for solving complex data analysis workflows
-Version: 0.1.21
-Date: 2023-03-23
+Version: 0.1.22
+Date: 2023-04-05
 Authors@R:
     c(person(
       given = "Erik"
@@ -38,6 +38,7 @@ Imports:
     ellipse,
     emmeans,
     flextable,
+    forcats,
     ggplot2,
     ggpubr,
     grid,
