e_vec_winsorize, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(e_table_print)
 export(e_table_sum_freq_prop)
 export(e_text_unicode_to_ascii)
 export(e_ttest_alt_hyp_text)
+export(e_vec_winsorize)
 export(erikmisc_conflicts)
 export(erikmisc_logo)
 export(erikmisc_packages)
