e_plot_function_limit_range, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(e_plot_clean_numeric_nonnum_minmax)
 export(e_plot_compare_medians)
 export(e_plot_corr_ellipse)
 export(e_plot_extract_legend)
+export(e_plot_function_limit_range)
 export(e_plot_grid_corner_label)
 export(e_plot_grid_corner_label_list)
 export(e_plot_lm_diagnostics)
