e_CI_limits, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,erikmisc_conflicts)
 S3method(print,erikmisc_logo)
 export("%>%")
 export("%notin%")
+export(e_CI_limits)
 export(e_REDCap_read_format_data)
 export(e_REDCap_replace_var_label)
 export(e_REDCap_use_dotfactor_var)
