e_rfsrc_classification, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
+export(e_plot_rf_vimp)
 export(e_plot_roc)
 export(e_plot_scatterplot)
 export(e_plot_table_prop)
@@ -76,6 +77,7 @@ export(e_pval_stars)
 export(e_read_data_files)
 export(e_read_data_subdir_into_lists)
 export(e_read_df_header_span_rows)
+export(e_rfsrc_classification)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
@@ -95,9 +97,12 @@ import(emmeans)
 import(ggplot2)
 import(ggpubr)
 import(labelled)
+import(parallel)
+import(randomForestSRC)
 import(rlang)
 import(stringr)
 import(tidyr)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
 importFrom(cAIC4,cAIC)
@@ -112,6 +117,7 @@ importFrom(car,vif)
 importFrom(caret,confusionMatrix)
 importFrom(cli,rule)
 importFrom(cli,symbol)
+importFrom(cowplot,as_grob)
 importFrom(cowplot,plot_grid)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
@@ -154,6 +160,7 @@ importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
 importFrom(lubridate,as_date)
+importFrom(lubridate,duration)
 importFrom(magrittr,"%>%")
 importFrom(modelr,mae)
 importFrom(modelr,mape)
@@ -164,6 +171,7 @@ importFrom(modelr,rsquare)
 importFrom(moonBook,mycsv)
 importFrom(moonBook,mytable)
 importFrom(nortest,ad.test)
+importFrom(purrr,keep)
 importFrom(purrr,map2)
 importFrom(purrr,pluck)
 importFrom(pwr,cohen.ES)
