--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: erikmisc
 Type: Package
 Title: Erik Erhardt's miscellaneous functions for solving complex data analysis workflows
-Version: 0.1.23
-Date: 2023-08-05
+Version: 0.1.24
+Date: 2023-09-08
 Authors@R:
     c(person(
       given = "Erik"
@@ -56,6 +56,8 @@ Imports:
     nortest,
     purrr,
     pwr,
+    randomForestSRC,
+    RColorBrewer,
     readr,
     readxl,
     rlang,
