--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ import(ggplot2)
 import(ggpubr)
 import(labelled)
 import(parallel)
+import(patchwork)
 import(randomForestSRC)
 import(rlang)
 import(stringr)
