e_read_data_subdir_into_lists and e_read_data_files, add delim txt files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -178,6 +178,7 @@ importFrom(purrr,pluck)
 importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
 importFrom(readr,read_csv)
+importFrom(readr,read_delim)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
 importFrom(scales,percent)
