--- a/NAMESPACE
+++ b/NAMESPACE
@@ -237,3 +237,4 @@ importFrom(tidyselect,ends_with)
 importFrom(utils,combn)
 importFrom(utils,glob2rx)
 importFrom(utils,read.csv)
+importFrom(utils,read.delim)
