e_substr_last_n, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ export(e_rmd_name_chunks)
 export(e_roc_gg)
 export(e_source_all_R_in_folder)
 export(e_split_list_columns_into_indicator_columns)
+export(e_substr_last_n)
 export(e_table1_summaries)
 export(e_table_aggregate)
 export(e_table_print)
