e_rfsrc_classification, save all plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,8 @@ importFrom(pwr,cohen.ES)
 importFrom(pwr,pwr.f2.test)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
+importFrom(readr,write_csv)
+importFrom(readr,write_lines)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
 importFrom(scales,percent)
