--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ importFrom(dplyr,select)
 importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
+importFrom(forcats,fct_reorder)
 importFrom(ggpubr,as_ggplot)
 importFrom(graphics,abline)
 importFrom(graphics,dotchart)
