update version and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(e_plot_longitudinal)
 export(e_plot_missing)
 export(e_plot_mnv_norm_qqplot)
 export(e_plot_model_contrasts)
+export(e_plot_projection)
 export(e_plot_rf_vimp)
 export(e_plot_roc)
 export(e_plot_scatterplot)
@@ -102,7 +103,10 @@ import(patchwork)
 import(randomForestSRC)
 import(rlang)
 import(stringr)
+import(tibble)
 import(tidyr)
+import(tsne)
+import(umap)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(ROCR,performance)
 importFrom(ROCR,prediction)
@@ -183,6 +187,7 @@ importFrom(readr,write_csv)
 importFrom(readr,write_lines)
 importFrom(readxl,excel_sheets)
 importFrom(readxl,read_xlsx)
+importFrom(rlang,sym)
 importFrom(scales,percent)
 importFrom(sjPlot,css_theme)
 importFrom(sjPlot,tab_df)
