--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(e_lm_power)
 export(e_lm_print_html_anova)
 export(e_lm_print_html_summary)
 export(e_log_shift)
+export(e_log_write)
 export(e_match_closest_in_range)
 export(e_message_capture)
 export(e_model_all_subsets_formula)
@@ -165,6 +166,10 @@ importFrom(knitr,kable)
 importFrom(labelled,var_label)
 importFrom(leaps,regsubsets)
 importFrom(lmerTest,as_lmerModLmerTest)
+importFrom(log4r,console_appender)
+importFrom(log4r,create.logger)
+importFrom(log4r,default_log_layout)
+importFrom(log4r,levellog)
 importFrom(lubridate,as_date)
 importFrom(lubridate,duration)
 importFrom(modelr,mae)
