e_file_newest_oldest, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(e_data_var_labels_clear)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
+export(e_file_newest_oldest)
 export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
@@ -141,6 +142,8 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_head)
+importFrom(dplyr,slice_tail)
 importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
