e_file_first_last, renamed from e_file_newest_oldest, argument name updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ export(e_data_var_labels_clear)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
-export(e_file_newest_oldest)
+export(e_file_first_last)
 export(e_headtail)
 export(e_is_error)
 export(e_linear_interpolation)
