address check warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,11 +150,13 @@ importFrom(forcats,fct_drop)
 importFrom(forcats,fct_reorder)
 importFrom(ggpubr,as_ggplot)
 importFrom(graphics,abline)
+importFrom(graphics,curve)
 importFrom(graphics,dotchart)
 importFrom(graphics,hist)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
+importFrom(graphics,plot.new)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,rug)
@@ -205,6 +207,7 @@ importFrom(stats,BIC)
 importFrom(stats,IQR)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
+importFrom(stats,cor.test)
 importFrom(stats,cov)
 importFrom(stats,density)
 importFrom(stats,dnorm)
