--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ export(erikmisc_packages)
 import(dplyr)
 import(emmeans)
 import(ggplot2)
+import(ggpmisc)
 import(ggpubr)
 import(labelled)
 import(parallel)
@@ -148,6 +149,7 @@ importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_reorder)
+importFrom(ggpp,annotate)
 importFrom(ggpubr,as_ggplot)
 importFrom(graphics,abline)
 importFrom(graphics,curve)
