--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ importFrom(graphics,dotchart)
 importFrom(graphics,hist)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
+importFrom(graphics,pairs)
 importFrom(graphics,par)
 importFrom(graphics,plot.new)
 importFrom(graphics,points)
@@ -212,6 +213,8 @@ importFrom(stats,as.formula)
 importFrom(stats,cor.test)
 importFrom(stats,cov)
 importFrom(stats,density)
+importFrom(stats,df)
+importFrom(stats,dist)
 importFrom(stats,dnorm)
 importFrom(stats,dt)
 importFrom(stats,formula)
@@ -254,6 +257,7 @@ importFrom(tidyr,uncount)
 importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,ends_with)
+importFrom(utils,capture.output)
 importFrom(utils,combn)
 importFrom(utils,glob2rx)
 importFrom(utils,read.csv)
