e_print_list_tree_hierarchy, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(e_plot_roc)
 export(e_plot_scatterplot)
 export(e_plot_table_prop)
 export(e_plot_ttest_pval)
+export(e_print_list_tree_hierarchy)
 export(e_pval_stars)
 export(e_read_data_files)
 export(e_read_data_subdir_into_lists)
@@ -134,6 +135,7 @@ importFrom(crayon,col_nchar)
 importFrom(crayon,green)
 importFrom(crayon,make_style)
 importFrom(crayon,red)
+importFrom(data.tree,FromListSimple)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,case_when)
