--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: erikmisc
 Type: Package
 Title: Erik Erhardt's miscellaneous functions for solving complex data analysis workflows
-Version: 0.2.10
-Date: 2024-01-05
+Version: 0.2.11
+Date: 2024-01-07
 Authors@R:
     c(person(
       given = "Erik"
@@ -33,6 +33,7 @@ Imports:
     cli,
     cowplot,
     crayon,
+    data.tree,
     dplyr,
     ellipse,
     emmeans,
