--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(e_plot_model_contrasts)
 export(e_plot_projection)
 export(e_plot_rf_vimp)
 export(e_plot_roc)
+export(e_plot_roc_reorder_hierarchy)
 export(e_plot_scatterplot)
 export(e_plot_table_prop)
 export(e_plot_ttest_pval)
