--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(e_calc_bmi)
 export(e_calc_bmi_categories)
 export(e_calc_phq2_categories)
 export(e_calc_phq9_categories)
+export(e_ccf_max)
 export(e_coalesce_by_column)
 export(e_coalesce_column_set)
 export(e_complete_multiple_keys)
