--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ export(e_table1_summaries)
 export(e_table_aggregate)
 export(e_table_print)
 export(e_table_sum_freq_prop)
+export(e_tc_bootstrap_phase)
 export(e_text_unicode_to_ascii)
 export(e_ttest_alt_hyp_text)
 export(e_vec_winsorize)
