update version to 0.2.16

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,8 +92,9 @@ export(e_table1_summaries)
 export(e_table_aggregate)
 export(e_table_print)
 export(e_table_sum_freq_prop)
-export(e_tc_bootstrap_phase)
 export(e_text_unicode_to_ascii)
+export(e_ts_bootstrap_phase)
+export(e_ts_lowpass_filter_ifft_harmonics)
 export(e_ttest_alt_hyp_text)
 export(e_vec_winsorize)
 export(erikmisc_conflicts)
@@ -109,6 +110,7 @@ import(parallel)
 import(patchwork)
 import(randomForestSRC)
 import(rlang)
+import(stats)
 import(stringr)
 import(tibble)
 import(tidyr)
