--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(e_read_df_header_span_rows)
 export(e_rfsrc_classification)
 export(e_rmd_name_chunks)
 export(e_roc_gg)
+export(e_scale_align)
 export(e_source_all_R_in_folder)
 export(e_split_list_columns_into_indicator_columns)
 export(e_substr_last_n)
@@ -156,6 +157,7 @@ importFrom(ellipse,ellipse)
 importFrom(flextable,regulartable)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_reorder)
+importFrom(ggbeeswarm,geom_beeswarm)
 importFrom(ggpp,annotate)
 importFrom(ggpubr,as_ggplot)
 importFrom(graphics,abline)
