e_derivative_finite_difference, new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(e_convert_oddsratio_to_probability)
 export(e_convert_probability_to_oddsratio)
 export(e_data_convert_factor_to_numeric)
 export(e_data_var_labels_clear)
+export(e_derivative_finite_difference)
 export(e_duplicated_all)
 export(e_expand_grid_df)
 export(e_extract_numbers_from_string)
@@ -101,6 +102,7 @@ export(e_vec_winsorize)
 export(erikmisc_conflicts)
 export(erikmisc_logo)
 export(erikmisc_packages)
+import(datasets)
 import(dplyr)
 import(emmeans)
 import(ggplot2)
